Add lint-js-and-ruby workflow

--- a/.github/workflows/lint-js-and-ruby.yml
+++ b/.github/workflows/lint-js-and-ruby.yml
@@ -1,12 +1,13 @@
-name: Build and test
+name: Lint JS and Ruby
 
 on: [push, pull_request]
 
 jobs:
-  install-package-node-packages:
+  build:
     strategy:
       matrix:
         ruby: [2.6]
+        node: [12]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -17,7 +18,7 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v1.4.3
       with:
-        node-version: '12'
+        node-version: ${{ matrix.node }}
     - name: Print system information
       run: |
         echo "Linux release: "; cat /etc/issue
@@ -32,8 +33,21 @@ jobs:
       with:
         path: node_modules
         key: v4-package-node-modules-cache-${{ hashFiles('yarn.lock') }}
+    - name: Save root ruby gems to cache
+      uses: actions/cache@v2
+      with:
+        path: vendor/bundle
+        key: v4-package-app-gem-cache-${{ hashFiles('react_on_rails.gemspec') }}
     - name: Install Node modules with Yarn for renderer package
       run: |
         yarn install --no-progress --no-emoji
         yarn run eslint -v
         sudo yarn global add yalc
+    - name: Install Ruby Gems for package
+      run: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
+    - name: Linting of Ruby
+      run: bundle exec rubocop
+    - name: Linting of JS
+      run: yarn start lint
+    - name: Check formatting
+      run: yarn start format.listDifferent
