--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,7 +135,7 @@ jobs:
       run: cd spec/dummy && bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
     - name: Ensure minimum required Chrome version
       run: |
-        echo -e "Installed $(google-chrome --version)\n"
+        echo -e "Already installed $(google-chrome --version)\n"
         MINIMUM_REQUIRED_CHROME_VERSION=75
         INSTALLED_CHROME_MAJOR_VERSION="$(google-chrome --version | tr ' .' '\t' | cut -f3)"
         if [[ $INSTALLED_CHROME_MAJOR_VERSION < $MINIMUM_REQUIRED_CHROME_VERSION ]]; then
