Add artifact uploading steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -153,3 +153,23 @@ jobs:
       run: bundle exec rake prepare_for_ci
     - name: Main CI
       run: bundle exec rake run_rspec:all_dummy
+    - name: Store test results
+      uses: actions/upload-artifact@v2
+      with:
+        name: main-rspec
+        path: ~/rspec
+    - name: Store artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: dummy-app-capybara
+        path: spec/dummy/tmp/capybara
+    - name: Store artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: dummy-app-test-log
+        path: spec/dummy/log/test.log
+    - name: Store artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: dummy-app-yarn-log
+        path: spec/dummy/yarn-error.log
