--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,7 @@ jobs:
       matrix:
         ruby: [2.6]
         node: [12]
+        rake_task: [run_rspec:all_dummy, run_rspec:all_but_examples, run_rspec:examples]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -152,7 +153,7 @@ jobs:
     - name: Prep for CI
       run: bundle exec rake prepare_for_ci
     - name: Main CI
-      run: bundle exec rake run_rspec:all_dummy
+      run: bundle exec rake ${{ matrix.rake_task }}
     - name: Store test results
       uses: actions/upload-artifact@v2
       with:
