--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -29,9 +29,13 @@ default: &default
     - .svg
     - .eot
     - .otf
+    - .svg
     - .ttf
     - .woff
     - .woff2
+    - .ttf
+    - .eot
+    - .svg
 
   extensions:
     - .mjs
@@ -55,6 +59,8 @@ development:
   # bundles need building. Also, remove the customization to spec/rails_helper.rb.
   compile: false
 
+  extract_css: false
+
   public_output_path: webpack/development
 
   # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
@@ -62,7 +68,6 @@ development:
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
-    extract_css: false
     https: false
     host: localhost
     port: 3035
