--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -37,9 +37,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-helmet": "^5.1.3",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.3.6",
-    "react-on-rails": "11.2.2",
+    "react-on-rails": "11.3.1-beta.0",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.2.1",
