--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -39,7 +39,7 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.3.6",
-    "react-on-rails": "11.3.1-beta.0",
+    "react-on-rails": "11.3.1",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.2.1",
