--- a/spec/loadable/package.json
+++ b/spec/loadable/package.json
@@ -10,54 +10,55 @@
     "node_modules"
   ],
   "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-arrow-functions": "^7.8.3",
-    "@babel/plugin-transform-async-to-generator": "^7.7.4",
-    "@babel/plugin-transform-destructuring": "^7.8.8",
-    "@babel/plugin-transform-regenerator": "^7.8.7",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "@loadable/babel-plugin": "^5.12.0",
-    "@loadable/component": "^5.12.0",
-    "@loadable/server": "^5.12.0",
-    "@loadable/webpack-plugin": "^5.12.0",
+    "@babel/plugin-transform-arrow-functions": "^7.12.1",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
+    "@babel/plugin-transform-destructuring": "^7.12.1",
+    "@babel/plugin-transform-regenerator": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/runtime": "^7.12.1",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/component": "^5.14.1",
+    "@loadable/server": "^5.14.0",
+    "@loadable/webpack-plugin": "^5.14.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.1.3",
-    "@rails/webpacker": "^5.0.0",
+    "@rails/webpacker": "^5.2.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-inline-react-svg": "^1.1.1",
-    "babel-runtime": "6.11.6",
+    "babel-plugin-inline-react-svg": "^1.1.2",
+    "babel-runtime": "6.26.0",
     "caniuse-lite": "^1.0.30001032",
-    "circular-dependency-plugin": "^5.0.2",
-    "compression-webpack-plugin": "^3.1.0",
+    "circular-dependency-plugin": "^5.2.2",
+    "compression-webpack-plugin": "^6.0.4",
     "es5-shim": "^4.5.10",
-    "expose-loader": "^0.7.5",
-    "file-loader": "^5.0.2",
+    "expose-loader": "^1.0.1",
+    "file-loader": "^6.2.0",
     "idempotent-babel-polyfill": "^7.2.5",
-    "imports-loader": "^0.8.0",
-    "lodash": "^4.17.15",
-    "mini-css-extract-plugin": "^0.8.0",
+    "imports-loader": "^1.2.0",
+    "lodash": "^4.17.20",
+    "mini-css-extract-plugin": "^1.2.1",
     "nps": "^5.9.12",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-helmet": "^5.2.0",
-    "react-on-rails": "11.3.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-on-rails": "11.3.1",
     "react-on-rails-pro-vm-renderer": "link:.yalc/react-on-rails-pro-vm-renderer",
     "react-refresh": "^0.8.1",
-    "react-router-dom": "^5.1.2",
-    "terser-webpack-plugin": "^2.3.5",
+    "react-router-dom": "^5.2.0",
+    "terser-webpack-plugin": "^5.0.3",
     "trash-cli": "^3.0.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "url-loader": "^3.0.0",
-    "webpack-merge": "^4.1.1",
+    "url-loader": "^4.1.1",
+    "webpack-merge": "^5.3.0",
     "webpack-notifier": "^1.7.0",
     "yalc": "^1.0.0-pre.35"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
