Update and simplify Gemfiles (#142)

--- a/react_on_rails_pro/spec/loadable/Gemfile
+++ b/react_on_rails_pro/spec/loadable/Gemfile
@@ -2,46 +2,6 @@
 
 source "https://rubygems.org"
 
-ruby "2.6.0"
+eval_gemfile File.expand_path("../../Gemfile.development_dependencies", __dir__)
 
-eval_gemfile File.expand_path("../../react_on_rails_pro.gemspec", __dir__)
-
-gem "react_on_rails", "11.3.0"
-# gem 'react_on_rails', path: '../../../react_on_rails'
-# gem 'react_on_rails', github: 'shakacode/react_on_rails'
-
-gem "net-http-persistent", "~> 3"
 gem "react_on_rails_pro", path: "../.."
-
-# Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem "pg"
-gem "rails", "~> 6.0.2", ">= 6.0.2.2"
-# Use Puma as the app server
-gem "puma", "~> 4.1"
-# Transpile app-like JavaScript. Read more: https://github.com/rails/webpacker
-gem "webpacker", "~> 5.0"
-# Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
-gem "turbolinks", "~> 5" if ENV["DISABLE_TURBOLINKS"].nil? || ENV["DISABLE_TURBOLINKS"].strip.empty?
-# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-# gem 'jbuilder', '~> 2.7'
-
-gem "mini_racer"
-
-group :development, :test do
-  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem "awesome_print"
-  gem "byebug", platforms: %i[mri mingw x64_mingw]
-  gem "listen", ">= 3.0.5", "< 3.2"
-  gem "pry"
-  gem "pry-byebug"
-  gem "pry-doc"
-  gem "pry-rails"
-  gem "pry-rescue"
-  gem "pry-stack_explorer"
-  gem "spring"
-  gem "spring-watcher-listen", "~> 2.0.0"
-end
-
-group :development do
-  gem "foreman", "~> 0.87"
-end
