--- a/react_on_rails_pro/spec/dummy/Gemfile
+++ b/react_on_rails_pro/spec/dummy/Gemfile
@@ -2,73 +2,6 @@
 
 source "https://rubygems.org"
 
-eval_gemfile File.expand_path("../../react_on_rails_pro.gemspec", __dir__)
+eval_gemfile File.expand_path("../../Gemfile.development_dependencies", __dir__)
 
-gem "react_on_rails", "11.3.0"
-# gem "react_on_rails", path: "../../../react_on_rails"
-# gem "react_on_rails", github: "shakacode/react_on_rails"
-
-gem "net-http-persistent", "~> 3"
 gem "react_on_rails_pro", path: "../.."
-
-gem "webmock" # http mocking
-
-gem "webpacker"
-# gem "bootsnap", require: false
-
-# Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem "rails"
-# Use sqlite3 as the database for Active Record
-gem "sqlite3"
-# Use SCSS for stylesheets
-gem "sass-rails"
-# Use Uglifier as compressor for JavaScript assets
-gem "uglifier"
-# Use CoffeeScript for .coffee assets and views
-gem "coffee-rails"
-
-# Use jquery as the JavaScript library
-gem "jquery-rails"
-
-gem "puma"
-
-# Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
-gem "turbolinks" if ENV["DISABLE_TURBOLINKS"].nil? || ENV["DISABLE_TURBOLINKS"].strip.empty?
-
-# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-gem "jbuilder"
-# bundle exec rake doc:rails generates the API under doc/api.
-gem "sdoc", group: :doc
-
-gem "mini_racer"
-
-group :development, :test do
-  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem "awesome_print"
-  gem "listen"
-  gem "pry"
-  gem "pry-byebug"
-  gem "pry-doc"
-  gem "pry-rails"
-  gem "pry-rescue"
-  gem "pry-stack_explorer"
-  gem "rubocop", require: false
-  gem "ruby-lint", require: false
-  gem "scss_lint", require: false
-
-  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
-  gem "spring"
-end
-
-group :test do
-  gem "capybara"
-  gem "capybara-screenshot"
-  gem "coveralls", require: false
-  gem "equivalent-xml", github: "mbklein/equivalent-xml"
-  gem "generator_spec"
-  gem "launchy"
-  gem "rails-controller-testing"
-  gem "rspec_junit_formatter"
-  gem "rspec-rails"
-  gem "webdrivers"
-end
