--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 # This is the configuration used to check the rubocop source code.
 # Check out: https://github.com/bbatsov/rubocop
+require: rubocop-performance
 
 AllCops:
   NewCops: enable
