add back vendor to exclusion list

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,6 +29,7 @@ AllCops:
     - 'spec/fixtures/**/*'
     - 'spec/react_on_rails/dummy-for-generators/**/*'
     - 'tmp/**/*'
+    - 'vendor/**/*'
 
 Naming/FileName:
   Exclude:
