--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-react": "^7.10.1",
     "@babel/runtime": "^7.10.3",
     "@rails/webpacker": "^4.2.2",
+    "@shakacode-tools/react-on-rails-pro-vm-renderer": "link:.yalc/@shakacode-tools/react-on-rails-pro-vm-renderer",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -41,7 +42,6 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^6.0.0-beta.2",
     "react-on-rails": "12.0.4",
-    "react-on-rails-pro-vm-renderer": "file:../..",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.2.1",
@@ -71,8 +71,8 @@
   "scripts": {
     "test": "yarn run build:test && yarn run lint && rspec",
     "lint": "cd ../.. && nps lint",
-    "preinstall": "yarn run link-source && yarn link react-on-rails-pro-vm-renderer",
-    "link-source": "cd ../.. && yarn link",
+    "preinstall": "yarn run link-source && yalc add --link @shakacode-tools/react-on-rails-pro-vm-renderer",
+    "link-source": "cd ../.. && yalc publish",
     "build:test": "rm -rf public/webpack/test && RAILS_ENV=test NODE_ENV=test bin/webpack",
     "build:dev": "rm -rf public/webpack/develoment && RAILS_ENV=development NODE_ENV=development bin/webpack",
     "build:dev:watch": "RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
