--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shakacode-tools/react-on-rails-pro-vm-renderer",
-  "version": "1.5.6-beta.12",
+  "version": "1.5.6",
   "protocolVersion": "1.0.0",
   "description": "react-on-rails-pro JavaScript for react_on_rails_pro Ruby gem",
   "main": "packages/vm-renderer/src/ReactOnRailsProVmRenderer.js",
