--- a/package-scripts.yml
+++ b/package-scripts.yml
@@ -2,23 +2,23 @@ scripts:
   test:
     default:
       description: Run all JS tests
-      script: jest packages/vm-renderer/**/*.test.js
+      script: jest packages/node-renderer/**/*.test.js
     debug:
       description: Debug all JS tests
-      script: ndb jest --runInBand packages/vm-renderer/**/*.test.js
+      script: ndb jest --runInBand packages/node-renderer/**/*.test.js
   check:
     description: Run all checks
     script: nps lint && nps format.listDifferent && nps test
   fix:
     description: Run all code fixes before committing
     script: nps eslint.fix && nps format
-  vm-renderer:
+  node-renderer:
     default:
       description:
-      script: jest packages/vm-renderer/**/*.test.js
+      script: jest packages/node-renderer/**/*.test.js
     debug:
-      description: Debug VM Renderer
-      script: rm -rf /tmp/react-on-rails-pro-vm-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node -r source-map-support/register packages/vm-renderer/src/default-vm-renderer.js
+      description: Debug Node Renderer
+      script: rm -rf /tmp/react-on-rails-pro-node-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node -r source-map-support/register packages/node-renderer/src/default-node-renderer.js
   lint:
     description: Run all linters (eslint)
     script: concurrently --prefix "[{name}]" --names "ESLINT" -c "blue,yellow,magenta,orange" "nps eslint"
@@ -57,7 +57,7 @@ scripts:
     json:
       default:
         description: Run prettier on JSON files.
-        script: rm -rf packages/vm-renderer/tests/tmp && prettier "**/*.json" --write
+        script: rm -rf packages/node-renderer/tests/tmp && prettier "**/*.json" --write
       listDifferent:
         description: Check if any JSON files would change by running prettier-eslint.
         script: prettier "**/*.json" --list-different
@@ -65,7 +65,7 @@ scripts:
   renderer:
     default:
       description: Starts the node renderer.
-      script: RENDERER_PORT=3800 RENDERER_SUPPORT_MODULES=TRUE node ./packages/vm-renderer/src/default-vm-renderer.js
+      script: RENDERER_PORT=3800 RENDERER_SUPPORT_MODULES=TRUE node ./packages/node-renderer/src/default-node-renderer.js
     debug:
       description: Starts the node renderer with debugging enabled. See Node.js V8 --inspector Manager (NiM)
-      script: RENDERER_WORKERS_COUNT=1 RENDERER_PORT=3800 RENDERER_SUPPORT_MODULES=TRUE ndb ./packages/vm-renderer/src/default-vm-renderer.js
+      script: RENDERER_WORKERS_COUNT=1 RENDERER_PORT=3800 RENDERER_SUPPORT_MODULES=TRUE ndb ./packages/node-renderer/src/default-node-renderer.js
