--- a/react_on_rails_pro/spec/loadable/Gemfile
+++ b/react_on_rails_pro/spec/loadable/Gemfile
@@ -2,6 +2,7 @@
 
 source "https://rubygems.org"
 
+ENV["SPEC_LOADABLE"] = "yes"
 eval_gemfile File.expand_path("../../Gemfile.development_dependencies", __dir__)
 
 gem "react_on_rails_pro", path: "../.."
