--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -89,6 +89,10 @@ Metrics/ModuleLength:
 Naming/RescuedExceptionsVariableName:
   Enabled: false
 
+RSpec/MultipleDescribes:
+  Exclude:
+    - 'spec/dummy/spec/system/integration_spec.rb'
+
 Style/GlobalVars:
   Exclude:
     - 'spec/dummy/config/environments/development.rb'
