--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -109,6 +109,9 @@ RSpec/MultipleDescribes:
   Exclude:
     - 'spec/dummy/spec/system/integration_spec.rb'
 
+RSpec/MultipleMemoizedHelpers:
+  Max: 12
+
 Style/GlobalVars:
   Exclude:
     - 'spec/dummy/config/environments/development.rb'
