--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/turbolinks": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
-    "babel-loader": "^8.0.2",
     "babelify": "^10.0.0",
     "blue-tape": "^1.0.0",
     "create-react-class": "^15.6.0",
@@ -45,9 +44,7 @@
     "release-it": "^8.2.0",
     "ts-jest": "^25.2.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
-    "webpack": "^3.4.1",
-    "webpack-manifest-plugin": "^1.2.1"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.9.6",
