--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,6 +274,13 @@ jobs:
           # TODO -- need to leverage Circle CI containers
           command: |
             bundle exec rake run_rspec:all_dummy
+      - run:
+          name: Deploy SC website
+          command: |
+            if [ $CIRCLE_BRANCH = "master" ]; then
+              curl -X POST -d '{}' ${NETLIFY_HOOK}
+            fi
+          when: on_success
       - store_test_results:
           path: ~/rspec
       - store_artifacts:
