Update Docs & Dependencies (#154)
Tests updated to be very similar to 
https://github.com/shakacode/react_on_rails/tree/master/spec/dummy

* Add more rubocop checks
* Updated many gems and npm packages

--- a/react_on_rails_pro/spec/dummy/config/webpacker.yml
+++ b/react_on_rails_pro/spec/dummy/config/webpacker.yml
@@ -52,7 +52,7 @@ default: &default
 development:
   <<: *default
   compile: false
-
+  extract_css: false
   public_output_path: webpack/development
 
   # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
