--- a/react_on_rails_pro/spec/dummy/package.json
+++ b/react_on_rails_pro/spec/dummy/package.json
@@ -4,39 +4,21 @@
   "description": "example of server rendering",
   "main": "server.js",
   "dependencies": {
-    "@babel/cli": "^7.10.3",
-    "@babel/core": "^7.10.3",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.3",
-    "@babel/polyfill": "^7.10.1",
-    "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
-    "@babel/runtime": "^7.10.3",
-    "@rails/webpacker": "^4.2.2",
+    "@rails/webpacker": "^5.2.1",
     "@shakacode-tools/react-on-rails-pro-node-renderer": "link:.yalc/@shakacode-tools/react-on-rails-pro-node-renderer",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-preset-react": "^6.24.1",
-    "core-js": "2",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "core-js": "3",
     "create-react-class": "^15.6.3",
-    "css-loader": "^0.28.4",
     "es5-shim": "^4.5.9",
-    "expose-loader": "^0.7.5",
-    "file-loader": "^4.0.0",
+    "expose-loader": "^1.0.3",
     "history": "^4.6.3",
-    "imports-loader": "^0.8.0",
+    "imports-loader": "^1.2.0",
     "jquery": "^3.4.1",
     "jquery-ujs": "^1.2.2",
-    "loader-utils": "^1.2.3",
     "lodash": "^4.17.4",
     "node-libs-browser": "^2.2.1",
-    "node-sass": "^4.12.0",
     "nps": "^5.9.3",
-    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -49,18 +31,15 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^2.0.1",
+    "url-loader": "^4.1.1",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.1.5"
+    "webpack-merge": "^5.1.4"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "body-parser": "^1.19.0",
-    "fbjs": "^1.0.0",
-    "jsdom": "^12.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "jsdom": "^16.4.0",
     "preload-webpack-plugin": "^3.0.0-alpha.1",
     "tape": "^4.7.0",
     "webpack-dev-server": "^3.2.1"
