--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -52,7 +52,7 @@ default: &default
 development:
   <<: *default
   compile: false
-
+  extract_css: false
   public_output_path: webpack/development
 
   # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
