--- a/react_on_rails_pro/spec/dummy/config/webpacker.yml
+++ b/react_on_rails_pro/spec/dummy/config/webpacker.yml
@@ -80,7 +80,7 @@ development:
 
 test:
   <<: *default
-  compile: false
+  compile: true
 
   # Compile test packs to a separate directory
   public_output_path: webpack/test
