Remove db logic & update dependencies [spec/loadable] (#160)
* add loadable-components SSR code to prove full support
* example closely matches https://github.com/gregberge/loadable-components/tree/main/examples/server-side-rendering

--- a/react_on_rails_pro/spec/loadable/react-on-rails-pro/package.json
+++ b/react_on_rails_pro/spec/loadable/react-on-rails-pro/package.json
@@ -10,6 +10,6 @@
   "scripts": {
     "node-renderer": "echo 'Starting React on Rails Pro Node Renderer.' && node ./react-on-rails-pro-node-renderer.js",
     "preinstall": "yarn run link-source && yalc add --link @shakacode-tools/react-on-rails-pro-node-renderer",
-    "link-source": "cd ../../../.. && yalc publish"
+    "link-source": "cd ../../.. && yalc publish"
   }
 }
