Updates Docs, Dependencies, Misc Fixes (#155)

--- a/react_on_rails_pro/spec/dummy/package.json
+++ b/react_on_rails_pro/spec/dummy/package.json
@@ -5,7 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "@babel/preset-react": "^7.10.1",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/component": "^5.14.1",
+    "@loadable/server": "^5.14.0",
+    "@loadable/webpack-plugin": "^5.14.0",
     "@rails/webpacker": "^5.2.1",
+    "@sentry/node": "^5.30.0",
+    "@sentry/tracing": "^5.30.0",
     "@shakacode-tools/react-on-rails-pro-node-renderer": "link:.yalc/@shakacode-tools/react-on-rails-pro-node-renderer",
     "babel-plugin-module-resolver": "^4.0.0",
     "core-js": "3",
@@ -16,10 +22,6 @@
     "imports-loader": "^1.2.0",
     "jquery": "^3.4.1",
     "jquery-ujs": "^1.2.2",
-    "@loadable/babel-plugin": "^5.13.2",
-    "@loadable/component": "^5.14.1",
-    "@loadable/server": "^5.14.0",
-    "@loadable/webpack-plugin": "^5.14.0",
     "lodash": "^4.17.4",
     "node-libs-browser": "^2.2.1",
     "nps": "^5.9.3",
