Add release-it as dev dependency

--- a/package.json
+++ b/package.json
@@ -36,11 +36,10 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "@sentry/node": "^5.17.0",
-    "@sentry/tracing": "^5.27.3",
-    "honeybadger": "^1.3.0",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@sentry/node": "^5.17.0",
+    "@sentry/tracing": "^5.27.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.17.0",
@@ -51,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.22.0",
+    "honeybadger": "^1.3.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
@@ -58,6 +58,7 @@
     "nps": "^5.9.12",
     "prettier": "^2.2.1",
     "prettier-eslint-cli": "^5.0.0",
+    "release-it": "^14.4.1",
     "supertest": "^4.0.2",
     "tap-diff": "^0.1.1",
     "tap-spec": "^5.0.0",
