--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,6 +287,8 @@ jobs:
       - store_test_results:
           path: ~/rspec
       - store_artifacts:
+          path: spec/dummy/tmp/capybara
+      - store_artifacts:
           path: spec/dummy/tmp/screenshots
       - store_artifacts:
           path: spec/dummy/log/test.log
