Sync w/ react on rails views & reorganize to streamline future sync (#209)

--- a/react_on_rails_pro/spec/dummy/package.json
+++ b/react_on_rails_pro/spec/dummy/package.json
@@ -9,7 +9,7 @@
     "@loadable/component": "^5.14.1",
     "@loadable/server": "^5.14.0",
     "@loadable/webpack-plugin": "^5.14.0",
-    "@rails/webpacker": "^5.2.1",
+    "@rails/webpacker": "5.2.1",
     "@sentry/node": "^6.2.3",
     "@sentry/tracing": "^6.2.3",
     "@shakacode-tools/react-on-rails-pro-node-renderer": "link:.yalc/@shakacode-tools/react-on-rails-pro-node-renderer",
@@ -17,11 +17,11 @@
     "core-js": "3",
     "create-react-class": "^15.6.3",
     "es5-shim": "^4.5.9",
-    "expose-loader": "^1.0.3",
+    "expose-loader": "1.0.3",
     "history": "^4.6.3",
     "honeybadger": "^1.4.0",
     "imports-loader": "^1.2.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jquery-ujs": "^1.2.2",
     "lodash": "^4.17.4",
     "node-libs-browser": "^2.2.1",
