--- a/react_on_rails_pro/.circleci/config.yml
+++ b/react_on_rails_pro/.circleci/config.yml
@@ -14,7 +14,7 @@ aliases:
              echo "Bundler version: "; bundle --version
   - &lint-js
     name: Linting of JS
-    command: yarn start lint
+    command: yarn start eslint
 
   - &lint-ruby
     name: Linting of Ruby
@@ -56,25 +56,25 @@ aliases:
   - &restore-package-node-modules-cache
     name: Restore cached node_modules directory
     keys:
-      - v3-package-node-modules-cache-{{ checksum "yarn.lock" }}
+      - v4-package-node-modules-cache-{{ checksum "yarn.lock" }}
 
   # Restore spec/dummy/node_modules dir from cache using yarn.lock checksum as a key.
   - &restore-dummy-app-node-modules-cache
     name: Restore cached spec/dummy/node_modules directory
     keys:
-      - v3-dummy-app-node-modules-cache-{{ checksum "spec/dummy/yarn.lock" }}
+      - v4-dummy-app-node-modules-cache-{{ checksum "spec/dummy/yarn.lock" }}
 
   # Restore vendor/bundle dir from cache using Gemfile.lock checksum as a key.
   - &restore-dummy-app-gem-cache
     name: Restore cached Ruby Gems for dummy app
     keys:
-      - v3-dummy-app-gem-cache-{{ checksum "spec/dummy/Gemfile.lock" }}
+      - v4-dummy-app-gem-cache-{{ checksum "spec/dummy/Gemfile.lock" }}
 
   # Restore vendor/bundle dir from cache using react_on_rails_pro.gemspec checksum as a key.
   - &restore-package-gem-cache
     name: Restore cached Ruby Gems for package
     keys:
-      - v3-package-app-gem-cache-{{ checksum "react_on_rails_pro.gemspec" }}
+      - v4-package-app-gem-cache-{{ checksum "react_on_rails_pro.gemspec" }}
 
     # NOTE: Sometimes CI generated docker images are not updated in time to keep up with the minimum required
     # by chromedriver versions of Chrome. Just bump here Chrome version if chromedriver raises errors
@@ -118,7 +118,7 @@ jobs:
       - run: *install-package-node-modules
       - save_cache:
           name: Save root node_modules to cache
-          key: v3-package-node-modules-cache-{{ checksum "yarn.lock" }}
+          key: v4-package-node-modules-cache-{{ checksum "yarn.lock" }}
           paths:
             - node_modules
 
@@ -134,7 +134,7 @@ jobs:
       - run: *install-dummy-app-node-modules
       - save_cache:
           name: Save spec/dummy/node_modules to cache
-          key: v3-dummy-app-node-modules-cache-{{ checksum "spec/dummy/yarn.lock" }}
+          key: v4-dummy-app-node-modules-cache-{{ checksum "spec/dummy/yarn.lock" }}
           paths:
             - spec/dummy/node_modules
             - spec/dummy/node_modules
@@ -150,7 +150,7 @@ jobs:
       - run: *install-package-ruby-gems
       - save_cache:
           name: Save dummy app ruby gems to cache
-          key: v3-package-app-gem-cache-{{ checksum "react_on_rails_pro.gemspec" }}
+          key: v4-package-app-gem-cache-{{ checksum "react_on_rails_pro.gemspec" }}
           paths:
             - vendor/bundle
 
@@ -165,7 +165,7 @@ jobs:
       - run: *install-dummy-app-ruby-gems
       - save_cache:
           name: Save dummy app ruby gems to cache
-          key: v3-dummy-app-gem-cache-{{ checksum "spec/dummy/Gemfile.lock" }}
+          key: v4-dummy-app-gem-cache-{{ checksum "spec/dummy/Gemfile.lock" }}
           paths:
             - spec/dummy/vendor/bundle
 
@@ -187,7 +187,7 @@ jobs:
           command: cd spec/dummy && yarn run build:test
       - save_cache:
           name: Save test webpack bundles to cache (for build number checksum used by rspec job)
-          key: v3-dummy-app-webpack-bundle-{{ .Revision }}
+          key: v4-dummy-app-webpack-bundle-{{ .Revision }}
           paths:
             - spec/dummy/public/webpack
   # Run JS unit tests for Renderer package.
@@ -235,7 +235,7 @@ jobs:
       - restore_cache: *restore-dummy-app-gem-cache
       - restore_cache:
           name: Restore cached webpack bundles for dummy app
-          key: v3-dummy-app-webpack-bundle-{{ .Revision }}
+          key: v4-dummy-app-webpack-bundle-{{ .Revision }}
       - run: *install-dummy-app-ruby-gems
       - run: *install-package-node-modules
       - run: *install-latest-chrome
@@ -256,7 +256,7 @@ jobs:
       - store_test_results:
           path: ~/rspec
       - store_artifacts:
-          path: spec/dummy/tmp/capybara
+          path: spec/dummy/tmp/screenshots
       - store_artifacts:
           path: spec/dummy/log/test.log
       - store_artifacts:
