--- a/react_on_rails_pro/package-scripts.yml
+++ b/react_on_rails_pro/package-scripts.yml
@@ -20,8 +20,8 @@ scripts:
       description: Debug Node Renderer
       script: rm -rf /tmp/react-on-rails-pro-node-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node -r source-map-support/register packages/node-renderer/src/default-node-renderer.js
   lint:
-    description: Run all linters (eslint)
-    script: concurrently --prefix "[{name}]" --names "ESLINT" -c "blue,yellow,magenta,orange" "nps eslint"
+    description: Run all linters
+    script: concurrently --prefix "[{name}]" --names "ESLINT, RUBOCOP, PRETTIER" -c "blue,yellow,magenta,orange" "nps eslint" "rubocop" "nps format.listDifferent"
 
   eslint:
     default:
