Enable node rendered components to return promises (#210)
* enable component render functions to return promises

* move "server render with timeout" view to pro only

* add rendering_returns_promises & include_execjs_polyfills configuration options

* update CI: create api request during server rendering

* update to RoR 2.4.0

--- a/react_on_rails_pro/spec/dummy/package.json
+++ b/react_on_rails_pro/spec/dummy/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "core-js": "3",
     "create-react-class": "^15.6.3",
+    "cross-fetch": "^3.1.4",
     "es5-shim": "^4.5.9",
     "expose-loader": "1.0.3",
     "history": "^4.6.3",
@@ -30,7 +31,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^6.0.0-beta.2",
-    "react-on-rails": "12.2.0",
+    "react-on-rails": "12.4.0-rc.0",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-refresh": "^0.8.1",
