--- a/react_on_rails_pro/spec/loadable/package.json
+++ b/react_on_rails_pro/spec/loadable/package.json
@@ -41,7 +41,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
-    "react-on-rails": "12.2.0",
+    "react-on-rails": "12.4.0-rc.0",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
