--- a/spec/dummy/bsconfig.json
+++ b/spec/dummy/bsconfig.json
@@ -9,14 +9,10 @@
   "reason": {
     "react-jsx": 3
   },
-  "bsc-flags": [
-    "-bs-super-errors"
-  ],
   "suffix": ".bs.js",
-  "namespace": true,
   "package-specs": [
     {
-      "module": "commonjs",
+      "module": "es6",
       "in-source": true
     }
   ],
